--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,7 @@ script:
   - php ./vendor/codeception/codeception/codecept run --debug acceptance PaymentCest.php
   - php ./vendor/codeception/codeception/codecept run --debug acceptance TaskCest.php
   - php ./vendor/codeception/codeception/codecept run --debug acceptance AllPagesCept.php
+  - php ./vendor/codeception/codeception/codecept run --debug acceptance TicketCest.php
   - php ./vendor/codeception/codeception/codecept run --debug functional PermissionsCest.php
 
   #- sed -i 's/NINJA_DEV=true/NINJA_PROD=true/g' .env
