--- a/.env.travis
+++ b/.env.travis
@@ -9,3 +9,4 @@ MAIL_DRIVER=log
 TRAVIS=true
 API_SECRET=password
 TEST_USERNAME=user@example.com
+CODECOV_TOKEN="f9d33009-bf48-44e8-8b95-9e554f23e667"
