Code coverage - Travis + Badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,9 @@ before_script:
 script:
   - php ./vendor/bin/phpunit --debug --verbose
 
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
+    
 notifications:
   email:
     on_success: never
