--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "bulma": "^0.7.1",
+        "bulma-admin-bar": "^1.0.0",
         "bulma-extensions": "^3.0.0",
         "gulp": "^3.9.1"
     }
