--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "@coreui/coreui": "^2.0.12",
+        "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
+        "@coreui/icons": "0.3.0",
+        "chart.js": "^2.7.2",
+        "flag-icon-css": "3.2.0",
+        "font-awesome": "4.7.0",
+        "pace-progress": "1.0.2",
+        "perfect-scrollbar": "1.4.0",
+        "simple-line-icons": "2.4.1"
     }
 }
