--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "asgrim/ofxparser": "^1.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-html": "^2.19"
+        "spatie/laravel-html": "^2.19",
+        "webpatser/laravel-countries": "dev-master#75992ad"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -39,7 +41,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Libraries/OFX.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
