--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
             "App\\": "app/"
         },
         "files": [
-            "app/Libraries/OFX.php"
+            "app/Libraries/OFX.php",
+            "app/Constants.php"
         ]
     },
     "autoload-dev": {
