--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ before_script:
   - php artisan key:generate --no-interaction
   - sed -i '$a NINJA_DEV=true' .env
   # create the database and user
-  - mysql -u root -e "create database IF NOT EXISTS db-ninja-1;"
-  - mysql -u root -e "create database IF NOT EXISTS db-ninja-2;"
+  - mysql -u root -e "create database IF NOT EXISTS `db-ninja-1`;"
+  - mysql -u root -e "create database IF NOT EXISTS `db-ninja-2`;"
   - mysql -u root -e "GRANT ALL PRIVILEGES ON db-ninja-1.* To 'ninja'@'localhost' IDENTIFIED BY 'ninja'; FLUSH PRIVILEGES;"
   - mysql -u root -e "GRANT ALL PRIVILEGES ON db-ninja-2.* To 'ninja'@'localhost' IDENTIFIED BY 'ninja'; FLUSH PRIVILEGES;"
   # migrate and seed the database
