Sign Up Scaffolding (#2453)
* Fix js dependencies

* Breadcrumb implementation

* Test for UniqueEmailRule Validation

* reduce length of account_key to prevent key too long error

* Fixes for travis - reduce user email length

* Reduce all unique field lengths to 100 to prevent key overflow

* Fix for Bank Model

* Prevent a user from registering multiple account with one email address when using multiple databases

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "php": "^7.1.3",
         "asgrim/ofxparser": "^1.2",
+        "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
@@ -43,7 +44,8 @@
             "App\\": "app/"
         },
         "files": [
-            "app/Libraries/OFX.php"
+            "app/Libraries/OFX.php",
+            "app/Constants.php"
         ]
     },
     "autoload-dev": {
