--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
+        "nwidart/laravel-modules": "^4.0",
+        "predis/predis": "^1.1",
         "spatie/laravel-html": "^2.19",
         "webpatser/laravel-countries": "dev-master#75992ad"
     },
