--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "nwidart/laravel-modules": "^4.0",
         "predis/predis": "^1.1",
         "spatie/laravel-html": "^2.19",
-        "webpatser/laravel-countries": "dev-master#75992ad"
+        "webpatser/laravel-countries": "dev-master#75992ad",
+        "wildbit/postmark-php": "^2.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
