--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "asgrim/ofxparser": "^1.2",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
+        "laracasts/presenter": "^0.2.1",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
