--- a/.env.travis
+++ b/.env.travis
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=false
-APP_URL=http://ninja.test
+APP_URL=http://127.0.0.1:8000
 APP_KEY=SomeRandomStringSomeRandomString
 APP_CIPHER=AES-256-CBC
 APP_LOCALE=en
