--- a/.env.travis
+++ b/.env.travis
@@ -1,6 +1,6 @@
-APP_ENV=development
+APP_ENV=local
 APP_DEBUG=false
-APP_URL=http://ninja.test
+APP_URL=http://127.0.0.1:8000
 APP_KEY=SomeRandomStringSomeRandomString
 APP_CIPHER=AES-256-CBC
 APP_LOCALE=en
@@ -10,8 +10,9 @@ DB_HOST=localhost
 DB_USERNAME=ninja
 DB_PASSWORD=ninja
 
-DB_DATABASE1=ninja1
-DB_DATABASE2=ninja2
+DB_CONNECTION=db-ninja-01
+DB_DATABASE1=ninja01
+DB_DATABASE2=ninja02
 
 MAIL_DRIVER=log
 TRAVIS=true
