--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -13,8 +13,9 @@ DB_HOST=localhost
 DB_USERNAME=ninja
 DB_PASSWORD=ninja
 
-DB_DATABASE1=ninja1
-DB_DATABASE2=ninja2
+DB_CONNECTION=db-ninja-01
+DB_DATABASE1=db-ninja-01
+DB_DATABASE2=db-ninja-02
 MAIL_DRIVER=smtp
 MAIL_PORT=587
 MAIL_ENCRYPTION=tls
