Change .env.example variable names, implement hash encoding of db numbers for URIs

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME="Invoice Ninja"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=db-ninja-01
+DB_HOST1=127.0.0.1
+DB_PORT1=3306
+DB_DATABASE1=homestead
+DB_USERNAME1=homestead
+DB_PASSWORD1=secret
 
 BROADCAST_DRIVER=log
+LOG_CHANNEL=stack
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
