--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_LOCALE=en
-APP_URL=http://ninja.test:8000
+APP_URL=http://127.0.0.1:8000
 APP_KEY=s7epnjtomsdond5zgfqgaqmwhhcjct02
 APP_CIPHER=AES-256-CBC
 REQUIRE_HTTPS=false
