Fixes for Tests, implement MakeHash trait (#2469)
* Fixes for Feature and browser tests

* Change .env.example variable names, implement hash encoding of db numbers for URIs

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_LOCALE=en
-APP_URL=http://ninja.test:8000
+APP_URL=http://127.0.0.1:8000
 APP_KEY=s7epnjtomsdond5zgfqgaqmwhhcjct02
 APP_CIPHER=AES-256-CBC
 REQUIRE_HTTPS=false
@@ -13,8 +13,9 @@ DB_HOST=localhost
 DB_USERNAME=ninja
 DB_PASSWORD=ninja
 
-DB_DATABASE1=ninja1
-DB_DATABASE2=ninja2
+DB_CONNECTION=db-ninja-01
+DB_DATABASE1=db-ninja-01
+DB_DATABASE2=db-ninja-02
 MAIL_DRIVER=smtp
 MAIL_PORT=587
 MAIL_ENCRYPTION=tls
