--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "predis/predis": "^1.1",
         "spatie/laravel-html": "^2.19",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wildbit/postmark-php": "^2.6"
+        "wildbit/postmark-php": "^2.6",
+        "yajra/laravel-datatables": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
