--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
   # these providers require referencing git commit's which cause Travis to fail
   #  - sed -i '/mollie/d' composer.json
   #  - sed -i '/2checkout/d' composer.json
-  - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+  - travis_retry composer install --no-interaction
 
 before_script:
   # copy configuration files
@@ -55,7 +55,9 @@ before_script:
   - php artisan optimize
   # migrate and seed the database
   # Start webserver on ninja.test:8000
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - ./vendor/laravel/dusk/bin/chromedriver-linux &
   - php artisan serve &
 
 script:
