--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laracasts/presenter": "^0.2.1",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.1",
+        "laravel/telescope": "^0.1.6",
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^4.0",
         "predis/predis": "^1.1",
