--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.4.0",
+        "quill": "^1.3.6",
         "socket.io-client": "^2.1.1"
     }
 }
