working on js localizations

--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
-        "mariuzzo/laravel-js-localization": "^1.4",
         "nwidart/laravel-modules": "^4.0",
         "predis/predis": "^1.1",
         "spatie/laravel-html": "^2.19",
+        "thepinecode/i18n": "^0.3.1",
         "webpatser/laravel-countries": "dev-master#75992ad",
         "wildbit/postmark-php": "^2.6",
         "yajra/laravel-datatables": "^1.0",
