--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "laravel-echo": "^1.4.0",
         "quill": "^1.3.6",
-        "socket.io-client": "^2.1.1"
+        "socket.io-client": "^2.1.1",
+        "vue-i18n": "^8.3.0"
     }
 }
