--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "hashids": "^1.2.2",
         "laravel-echo": "^1.4.0",
         "quill": "^1.3.6",
         "socket.io-client": "^2.1.1",
