Set JEST for Typescript testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,6 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-    "resources/js/ts/**/*"
+    "resources/js/src/**/*"
   ]
 }
