--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "test": "jest"
     },
     "devDependencies": {
         "@coreui/coreui": "^2.0.12",
         "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
         "@coreui/icons": "^0.3.0",
+        "@types/jest": "^23.3.9",
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
         "chart.js": "^2.7.2",
         "cross-env": "^5.1",
         "flag-icon-css": "3.2.0",
         "font-awesome": "^4.7",
+        "jest": "^23.6.0",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
@@ -26,9 +29,11 @@
         "perfect-scrollbar": "1.4.0",
         "popper.js": "^1.12",
         "simple-line-icons": "2.4.1",
+        "ts-jest": "^23.10.5",
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "@types/node": "^10.12.10",
         "hashids": "^1.2.2",
         "laravel-echo": "^1.4.0",
         "quill": "^1.3.6",
