--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ before_script:
 script:
   - php ./vendor/bin/phpunit --debug --verbose --coverage-clover=coverage.xml
   - php artisan dusk
+  - npm test
 after_success:
     - bash <(curl -s https://codecov.io/bash)
 
