--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@coreui/coreui": "^2.0.12",
         "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
         "@coreui/icons": "^0.3.0",
+        "@types/bluebird": "^3.5.24",
+        "@types/core-js": "^0.9.36",
         "@types/jest": "^23.3.9",
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
