--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "ts-loader": "3.5.0",
         "typescript": "^3.1.6",
         "vue-i18n": "^8.3.0",
+        "vue-select": "^2.5.1",
         "vue-toastr": "^2.0.16"
     }
 }
