--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "@types/lodash": "^4.14.118",
         "@types/node": "^10.12.10",
         "hashids": "^1.2.2",
         "laravel-echo": "^1.4.0",
@@ -43,6 +44,7 @@
         "ts-loader": "3.5.0",
         "typescript": "^3.1.6",
         "vue-i18n": "^8.3.0",
+        "vue-select": "^2.5.1",
         "vue-toastr": "^2.0.16"
     }
 }
