--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "socket.io-client": "^2.1.1",
         "ts-loader": "3.5.0",
         "typescript": "^3.1.6",
+        "vue-events": "^3.1.0",
         "vue-i18n": "^8.3.0",
         "vue-select": "^2.5.1",
         "vue-toastr": "^2.0.16"
