--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/core-js": "^0.9.36",
         "@types/jest": "^23.3.9",
         "axios": "^0.18",
+        "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.0.0",
         "chart.js": "^2.7.2",
         "cross-env": "^5.1",
@@ -32,7 +33,8 @@
         "popper.js": "^1.12",
         "simple-line-icons": "2.4.1",
         "ts-jest": "^23.10.5",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vuetable-2": "^1.7.5"
     },
     "dependencies": {
         "@types/lodash": "^4.14.118",
@@ -43,6 +45,7 @@
         "socket.io-client": "^2.1.1",
         "ts-loader": "3.5.0",
         "typescript": "^3.1.6",
+        "vue-events": "^3.1.0",
         "vue-i18n": "^8.3.0",
         "vue-select": "^2.5.1",
         "vue-toastr": "^2.0.16"
