fixes for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ before_script:
   - php artisan migrate --database=db-ninja-02 --seed --no-interaction
   - php artisan optimize
   - npm install
+  - npm install @types/bluebird @types/core-js@0.9.36
   - npm run production
   # migrate and seed the database
   # Start webserver on ninja.test:8000
