--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "nesbot/carbon": "^1.25",
         "nwidart/laravel-modules": "1.*",
         "omnipay/authorizenet": "dev-solution-id as 2.5.0",
+        "omnipay/firstdata": "^2.4",
         "patricktalmadge/bootstrapper": "5.5.x",
         "pragmarx/google2fa-laravel": "^0.1.2",
         "predis/predis": "^1.1",
@@ -144,6 +145,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/hillelcoren/php-phantomjs"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/davidbankes/omnipay-firstdata.git"
         }
     ]
 }
