--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "axios": "^0.18",
         "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.0.0",
-        "chart.js": "^2.7.2",
+        "chart.js": "^2.7.3",
         "cross-env": "^5.1",
         "flag-icon-css": "3.2.0",
         "font-awesome": "^4.7",
@@ -45,8 +45,10 @@
         "socket.io-client": "^2.1.1",
         "ts-loader": "3.5.0",
         "typescript": "^3.1.6",
+        "vue-chartjs": "^3.4.0",
         "vue-events": "^3.1.0",
         "vue-i18n": "^8.3.0",
+        "vue-multiselect": "^2.1.3",
         "vue-select": "^2.5.1",
         "vue-toastr": "^2.0.16"
     }
