--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,7 @@
         "predis/predis": "^1.1",
         "spatie/laravel-html": "^2.19",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wildbit/postmark-php": "^2.6",
-        "yajra/laravel-datatables": "^1.0",
-        "yajra/laravel-datatables-html": "^3.0"
+        "wildbit/postmark-php": "^2.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
