--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "nwidart/laravel-modules": "1.*",
         "omnipay/authorizenet": "dev-solution-id as 2.5.0",
         "omnipay/firstdata": "^2.4",
+        "omnipay/payfast": "dev-master",
         "patricktalmadge/bootstrapper": "5.5.x",
         "pragmarx/google2fa-laravel": "^0.1.2",
         "predis/predis": "^1.1",
