--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "vue-events": "^3.1.0",
         "vue-multiselect": "^2.1.3",
         "vue-select": "^2.5.1",
-        "vue-toastr": "^2.0.16"
+        "vue-toastr": "^2.0.16",
+        "vuex": "^3.1.0"
     }
 }
