--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jest": "^23.6.0",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
+        "lodash": "^4.17.5",
         "pace-progress": "1.0.2",
         "perfect-scrollbar": "1.4.0",
         "popper.js": "^1.12",
@@ -38,19 +39,17 @@
     "dependencies": {
         "@types/lodash": "^4.14.118",
         "@types/node": "^10.12.10",
-        "axios-progress-bar": "^1.2.0",
         "hashids": "^1.2.2",
         "laravel-echo": "^1.4.0",
-        "lodash.get": "^4.4.2",
         "quill": "^1.3.6",
         "socket.io-client": "^2.1.1",
         "ts-loader": "3.5.0",
         "typescript": "^3.1.6",
         "vue-chartjs": "^3.4.0",
         "vue-events": "^3.1.0",
+        "vue-i18n": "^8.3.0",
         "vue-multiselect": "^2.1.3",
         "vue-select": "^2.5.1",
-        "vue-toastr": "^2.0.16",
-        "vuex": "^3.1.0"
+        "vue-toastr": "^2.0.16"
     }
 }
