Add ctrans global function for custom translations. Reduced DB queries for Client List. Added Debugbar for dev environments

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "wildbit/postmark-php": "^2.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
