force collection on nested view model

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@coreui/coreui": "^2.0.12",
         "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
         "@coreui/icons": "^0.3.0",
-        "@types/bluebird": "^3.5.24",
+        "@types/bluebird": "^3.5.25",
         "@types/core-js": "^0.9.36",
         "@types/jest": "^23.3.9",
         "axios": "^0.18",
@@ -40,6 +40,7 @@
         "@types/lodash": "^4.14.118",
         "@types/node": "^10.12.10",
         "axios-progress-bar": "^1.2.0",
+        "chalk": "^2.4.2",
         "hashids": "^1.2.2",
         "laravel-echo": "^1.4.0",
         "lodash.get": "^4.4.2",
