--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "predis/predis": "^1.1",
         "spatie/laravel-html": "^2.19",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wildbit/postmark-php": "^2.6"
+        "wildbit/postmark-php": "^2.6",
+        "willdurand/geocoder": "^4.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
