--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
         "nwidart/laravel-modules": "^4.0",
         "predis/predis": "^1.1",
         "spatie/laravel-html": "^2.19",
+        "toin0u/geocoder-laravel": "^4.0",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wildbit/postmark-php": "^2.6",
-        "willdurand/geocoder": "^4.2"
+        "wildbit/postmark-php": "^2.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
