--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
         "socket.io-client": "^2.1.1",
         "ts-loader": "3.5.0",
         "typescript": "^3.1.6",
+        "vue-affix": "^0.4.0",
         "vue-chartjs": "^3.4.0",
         "vue-events": "^3.1.0",
         "vue-multiselect": "^2.1.3",
+        "vue-scrollactive": "^0.8.0",
         "vue-select": "^2.5.1",
         "vue-toastr": "^2.0.16",
         "vuex": "^3.1.0"
