--- a/.env.example
+++ b/.env.example
@@ -33,4 +33,5 @@ MAIL_ENCRYPTION=null
 MULTI_DB_ENABLED=true
 POSTMARK_API_TOKEN=
 
-GOOGLE_MAPS_API_KEY
+GOOGLE_MAPS_API_KEY=
+COMPANY_SETTINGS='{"timezone_id":"15","currency_id":"1","language_id":"1","payment_terms":"7"}' 
