Client setting defaults

--- a/.env.example
+++ b/.env.example
@@ -34,4 +34,4 @@ MULTI_DB_ENABLED=true
 POSTMARK_API_TOKEN=
 
 GOOGLE_MAPS_API_KEY=
-COMPANY_SETTINGS='{"timezone_id":"15","currency_id":"1","language_id":"1","payment_terms":"7"}' 
+COMPANY_SETTINGS='{"timezone_id":"15","currency_id":"1","language_id":"1","payment_terms":"7","date_format_id":"1","datetime_format_id":"1","military_time":"0","start_of_week":"1", "financial_year_start": "2000-01-01"}'
