--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,25 @@ APP_DEBUG=true
 
 APP_URL=http://localhost
 
+USER_AUTH_PROVIDER=users
+CONTACT_AUTH_PROVIDER=contacts
+
 DB_CONNECTION=db-ninja-01
-DB_HOST1=127.0.0.1
+MULTI_DB_ENABLED=true
+
+DB_HOST1=localhost
+DB_DATABASE1=db-ninja-01
+DB_USERNAME1=ninja
+DB_PASSWORD1=ninja
 DB_PORT1=3306
-DB_DATABASE1=homestead
-DB_USERNAME1=homestead
-DB_PASSWORD1=secret
+
+DB_HOST2=localhost
+DB_DATABASE2=db-ninja-02
+DB_USERNAME2=ninja
+DB_PASSWORD2=ninja
+DB_PORT1=3306
+
+
 
 BROADCAST_DRIVER=log
 LOG_CHANNEL=stack
@@ -34,4 +47,3 @@ MULTI_DB_ENABLED=true
 POSTMARK_API_TOKEN=
 
 GOOGLE_MAPS_API_KEY=
-COMPANY_SETTINGS='{"timezone_id":"15","currency_id":"1","language_id":"1","payment_terms":"7","date_format_id":"1","datetime_format_id":"1","military_time":"0","start_of_week":"1", "financial_year_start": "2000-01-01"}'
