--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,6 @@
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^4.0",
         "predis/predis": "^1.1",
-        "spatie/laravel-html": "^2.19",
         "webpatser/laravel-countries": "dev-master#75992ad",
         "wildbit/postmark-php": "^2.6"
     },
@@ -49,8 +48,7 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/",
-            "Modules\\": "Modules/"
+            "App\\": "app/"
         },
         "files": [
             "app/Libraries/OFX.php",
