--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "league/fractal": "^0.17.0",
         "nwidart/laravel-modules": "^4.0",
         "predis/predis": "^1.1",
+        "sentry/sentry-laravel": "^1.0",
         "webpatser/laravel-countries": "dev-master#75992ad",
         "wildbit/postmark-php": "^2.6"
     },
