--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,14 @@ group: deprecated-2017Q4
 
 php:
   - 7.2
+  - 7.3
 
 addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
   chrome: stable
   hosts:
     - www.ninja.test
