--- a/.travis.yml
+++ b/.travis.yml
@@ -70,9 +70,9 @@ before_script:
   - npm run production
   # migrate and seed the database
   # Start webserver on ninja.test:8000
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3
+  # export DISPLAY=:99.0
+  # sh -e /etc/init.d/xvfb start
+  # sleep 3
   - ./vendor/laravel/dusk/bin/chromedriver-linux &
   - php artisan serve &
 
