--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ before_script:
   # export DISPLAY=:99.0
   # sh -e /etc/init.d/xvfb start
   # sleep 3
-  - ./vendor/laravel/dusk/bin/chromedriver-linux &
+  # ./vendor/laravel/dusk/bin/chromedriver-linux &
   - php artisan serve &
 
 script:
