--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,15 @@
         "fideloper/proxy": "^4.0",
         "hashids/hashids": "^3.0",
         "laracasts/presenter": "^0.2.1",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "league/fractal": "^0.17.0",
         "nwidart/laravel-modules": "^4.0",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^1.0",
+        "simshaun/recurr": "^4.0",
+        "superbalist/laravel-google-cloud-storage": "^2.2",
         "webpatser/laravel-countries": "dev-master#75992ad",
         "wildbit/postmark-php": "^2.6"
     },
