--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "test": "jest"
-    },
-    "devDependencies": {
-        "@coreui/coreui": "^2.0.12",
-        "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
-        "@coreui/icons": "^0.3.0",
-        "@types/bluebird": "^3.5.25",
-        "@types/core-js": "^0.9.36",
-        "@types/jest": "^23.3.9",
-        "axios": "^0.18",
-        "babel-preset-stage-2": "^6.24.1",
-        "bootstrap": "^4.0.0",
-        "chart.js": "^2.7.3",
-        "cross-env": "^5.1",
-        "flag-icon-css": "3.2.0",
-        "font-awesome": "^4.7",
-        "jest": "^23.6.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "pace-progress": "1.0.2",
-        "perfect-scrollbar": "1.4.0",
-        "popper.js": "^1.12",
-        "simple-line-icons": "2.4.1",
-        "ts-jest": "^23.10.5",
-        "vue": "^2.5.17",
-        "vuetable-2": "^1.7.5"
-    },
-    "dependencies": {
-        "@types/lodash": "^4.14.118",
-        "@types/node": "^10.12.10",
-        "axios-progress-bar": "^1.2.0",
-        "chalk": "^2.4.2",
-        "hashids": "^1.2.2",
-        "laravel-echo": "^1.4.0",
-        "lodash.get": "^4.4.2",
-        "quill": "^1.3.6",
-        "socket.io-client": "^2.1.1",
-        "ts-loader": "3.5.0",
-        "typescript": "^3.1.6",
-        "vue-affix": "^0.4.0",
-        "vue-chartjs": "^3.4.0",
-        "vue-events": "^3.1.0",
-        "vue-multiselect": "^2.1.3",
-        "vue-scrollactive": "^0.8.0",
-        "vue-select": "^2.5.1",
-        "vue-toastr": "^2.0.16",
-        "vuex": "^3.1.0"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@coreui/coreui": "^2.0.12",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
+    "@coreui/icons": "^0.3.0",
+    "@types/bluebird": "^3.5.25",
+    "@types/core-js": "^0.9.36",
+    "@types/jest": "^23.3.9",
+    "axios": "^0.18",
+    "babel-preset-stage-2": "^6.24.1",
+    "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.3",
+    "cross-env": "^5.1",
+    "flag-icon-css": "3.2.0",
+    "font-awesome": "^4.7",
+    "jest": "^23.6.0",
+    "jquery": "^3.2",
+    "laravel-mix": "^2.0",
+    "pace-progress": "1.0.2",
+    "perfect-scrollbar": "1.4.0",
+    "popper.js": "^1.12",
+    "simple-line-icons": "2.4.1",
+    "ts-jest": "^23.10.5",
+    "vue": "^2.5.17",
+    "vuetable-2": "^1.7.5"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.118",
+    "@types/node": "^10.12.10",
+    "axios-progress-bar": "^1.2.0",
+    "chalk": "^2.4.2",
+    "hashids": "^1.2.2",
+    "laravel-echo": "^1.4.0",
+    "lodash.get": "^4.4.2",
+    "puppeteer": "^1.15.0",
+    "quill": "^1.3.6",
+    "socket.io-client": "^2.1.1",
+    "ts-loader": "3.5.0",
+    "typescript": "^3.1.6",
+    "vue-affix": "^0.4.0",
+    "vue-chartjs": "^3.4.0",
+    "vue-events": "^3.1.0",
+    "vue-multiselect": "^2.1.3",
+    "vue-scrollactive": "^0.8.0",
+    "vue-select": "^2.5.1",
+    "vue-toastr": "^2.0.16",
+    "vuex": "^3.1.0"
+  }
 }
