Add Omnipay 3 drivers

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "league/fractal": "^0.17.0",
+        "league/omnipay": "^3",
         "nwidart/laravel-modules": "^4.0",
+        "omnipay/paypal": "^3.0",
+        "omnipay/stripe": "^3.0",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^1.0",
         "simshaun/recurr": "^4.0",
