--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "type": "project",
     "require": {
-        "php": "^7.1.3",
+        "php": ">=7.3",
         "asgrim/ofxparser": "^1.2",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
