--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@coreui/coreui": "^2.1.12",
     "@coreui/icons": "^0.3.0",
     "bootstrap": "^4.3.1",
+    "cross-env": "^5.2.0",
     "font-awesome": "^4.7.0",
     "laravel-mix": "^4.1.2",
     "puppeteer": "^1.18.1"
