Stubs for datatables

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "spatie/browsershot": "^3.29",
         "superbalist/laravel-google-cloud-storage": "^2.2",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wildbit/postmark-php": "^2.6"
+        "wildbit/postmark-php": "^2.6",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
