--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ before_script:
 
 script:
   - php ./vendor/bin/phpunit --debug --verbose --coverage-clover=coverage.xml
-  # php artisan dusk
+  - php artisan dusk
   #- npm test
 after_success:
     - bash <(curl -s https://codecov.io/bash)
