fixes for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,8 @@ before_script:
   - php artisan migrate --database=db-ninja-01 --seed --no-interaction
   - php artisan migrate --database=db-ninja-02 --seed --no-interaction
   - php artisan optimize
+  - npm install -g npm-install-peers
+  - npm-install-peers
   - npm install
   - npm install @types/bluebird @types/core-js@0.9.36
   - npm run production
