--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "cross-env": "^5.2.0",
     "font-awesome": "^4.7.0",
     "laravel-mix": "^4.1.2",
-    "puppeteer": "^1.18.1"
-  },
-  "peerDependencies": {
-    "jquery": "1.9.1 - 3",
+    "puppeteer": "^1.18.1",
+    "jquery": "^3.4.1",
     "perfect-scrollbar": "^1.3.0",
     "popper.js": "^1.14.3"
   }
