--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,7 @@ before_script:
   # sh -e /etc/init.d/xvfb start
   # sleep 3
   # ./vendor/laravel/dusk/bin/chromedriver-linux &
+  - php artisan dusk:chrome-driver 75
   - php artisan serve &
 
 script:
