--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
     "font-awesome": "^4.7.0",
-    "laravel-mix": "^4.1.2",
-    "puppeteer": "^1.18.1",
     "jquery": "^3.4.1",
+    "laravel-mix": "^4.1.2",
     "perfect-scrollbar": "^1.3.0",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "puppeteer": "^1.18.1",
+    "select2": "^4.0.8"
   }
 }
